==> davideferrario/TommRo/libs/02_tommRoCHw/template/bus/env/arm/SiLabs/tommRoCHwTemplateBusEnvironmentSPIMaster.c <==
#include "bus/env/tommRoCHwTemplateBusEnvironmentSPIMaster.h"
#include "TOMMROC.h"
#include "env/tommRoCTemplateEnv.h"
#include "bus/common/spi/master/tommRoCHwTemplateBusCommonSPIMasterCb.h"
#include "bus/env/arm/SiLabs/spi/tommRoCHwTemplateBusSPISiLabsHal.h"
#include "bus/env/arm/SiLabs/spi/tommRoCHwTemplateBusSPISiLabsLocation.h"
#define __DEFAULT_MODE__                (TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_0)
#define __DEFAULT_BAUDRATE__            (500000)
#define __SPI_DUMMYDATA__               (0xFF)
#define __EMPTY___tommRoC_hw_spi_master_config_t____                                \
{                                                                                   \
    /* .mode */         __DEFAULT_MODE__,                                           \
    /* .baudRate */     __DEFAULT_BAUDRATE__,                                       \
/* .siLabsLocation */   __EMPTY_tommRoC_hw_template_bus_spi_silabs_location_t__,    \
}
#define __EMPTY___tommRoC_hw_spi_master_handle_t____    \
{                                                       \
    /* .spiPtr */           NULL,                       \
}

static tommRoC_hw_err_enum_t _spi_master_write_transfer(
                __tommRoC_hw_spi_master_handle_t__* const   spiHandlePtr,
        const   uint8_t*                            const   writeBufferPtr,
        const   uint16_t                                    writeBufferLen,
        const   uint32_t                                    timeoutMsec) {

    uint16_t i;
    uint8_t* ptr;

    TOMMROC_UTIL_UNUSED_PARAM(timeoutMsec);

    for (i = 0, ptr = (uint8_t*) writeBufferPtr; i < writeBufferLen; ++i, ++ptr) {
        USART_SpiTransfer((USART_TypeDef*) spiHandlePtr->spiPtr, *ptr);
    }

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _spi_master_read_transfer(
                __tommRoC_hw_spi_master_handle_t__* const   spiHandlePtr,
                uint8_t*                            const   readBufferPtr,
        const   uint16_t                                    toReadAmount,
        const   uint32_t                                    timeoutMsec) {

    uint16_t i;
    uint8_t* ptr;

    TOMMROC_UTIL_UNUSED_PARAM(timeoutMsec);

    for (i = 0, ptr = readBufferPtr; i < toReadAmount; ++i, ++ptr) {
        *ptr = USART_SpiTransfer((USART_TypeDef*) spiHandlePtr->spiPtr, __SPI_DUMMYDATA__);
    }

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _spi_master_transceive_transfer(
                __tommRoC_hw_spi_master_handle_t__* const   spiHandlePtr,
        const   uint8_t*                            const   writeBufferPtr,
                uint8_t*                            const   readBufferPtr,
        const   uint16_t                                    bufferLength,
        const   uint32_t                                    timeoutMsec) {

    uint16_t i;
    uint8_t* ptrWr;
    uint8_t* ptrRd;

    TOMMROC_UTIL_UNUSED_PARAM(timeoutMsec);

    ptrWr   = (uint8_t*) writeBufferPtr;
    ptrRd   = readBufferPtr;

    for (i = 0; i < bufferLength; ++i, ++ptrWr, ++ptrRd) {
        *ptrRd = USART_SpiTransfer((USART_TypeDef*) spiHandlePtr->spiPtr, *ptrWr);
    }

    return TOMMRO_C_HW_ERR_SUCCESS;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentSPIMaster0Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

    tommRoC_hw_template_bus_spi_silabs_hal_config_t halConfig;

    halConfig.clock     = cmuClock_USART0;
    halConfig.spiPtr    = (void*) USART0;
    halConfig.baudRate  = _spi_master_config_0.baudRate;
    halConfig.clockMode = _spi_master_mode_enum_to_USART_ClockMode(_spi_master_config_0.mode);
    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemCopy(&halConfig.location, &_spi_master_config_0.siLabsLocation, sizeof(tommRoC_hw_template_bus_spi_silabs_location_t)));

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(tommRoCHwTemplateBusSPISiLabsHalMasterInit(&halConfig));

    _spi_master_SPI0_get_callback_ARM(cbFunctPtr);

    _spi_master_handle_0.spiPtr = halConfig.spiPtr;

    return TOMMRO_C_HW_ERR_SUCCESS;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentSPIMaster1Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

    tommRoC_hw_template_bus_spi_silabs_hal_config_t halConfig;

    halConfig.clock     = cmuClock_USART1;
    halConfig.spiPtr    = (void*) USART1;
    halConfig.baudRate  = _spi_master_config_1.baudRate;
    halConfig.clockMode = _spi_master_mode_enum_to_USART_ClockMode(_spi_master_config_1.mode);
    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemCopy(&halConfig.location, &_spi_master_config_1.siLabsLocation, sizeof(tommRoC_hw_template_bus_spi_silabs_location_t)));

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(tommRoCHwTemplateBusSPISiLabsHalMasterInit(&halConfig));

    _spi_master_SPI1_get_callback_ARM(cbFunctPtr);

    _spi_master_handle_1.spiPtr = halConfig.spiPtr;

    return TOMMRO_C_HW_ERR_SUCCESS;
}
