==> davideferrario/TommRo/libs/02_tommRoCHw/template/bus/env/arm/NXP/tommRoCHwTemplateBusEnvironmentSPIMaster.c <==
#include "bus/env/tommRoCHwTemplateBusEnvironmentSPIMaster.h"
#include "TOMMROC.h"
#include "env/tommRoCTemplateEnv.h"
#include "bus/common/spi/master/tommRoCHwTemplateBusCommonSPIMasterCb.h"
#include "bus/env/arm/NXP/spi/tommRoCHwTemplateBusSPINXPHal.h"
#include "bus/env/arm/NXP/spi/tommRoCHwTemplateBusSPINXPLocation.h"
#include "TOMMROCMw.h"
#include "TOMMROCMwTemplate.h"
#include "fsl_spi.h"
#include "fsl_dspi.h"
#define __DEFAULT_MODE__                (TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_0)
#define __DEFAULT_BAUDRATE__            (500000)
#define __DEFAULT_ROUTE_LOCATION__      (TOMMROC_HW_TEMPLATE_LOCATION_0)
#define __master_handle_t__             spi_master_handle_t
#define __transfer_t__                  spi_transfer_t
#define __master_config_t__             spi_master_config_t
#define __slave_config_t__              spi_slave_config_t
#define __MasterTransferCreateHandle__  SPI_MasterTransferCreateHandle
#define __MasterTransferNonBlocking__   SPI_MasterTransferNonBlocking
#define __MasterTransferAbort__         SPI_MasterTransferAbort
#define __MasterGetDefaultConfig__      SPI_MasterGetDefaultConfig
#define __master_handle_t__             dspi_master_handle_t
#define __transfer_t__                  dspi_transfer_t
#define __master_config_t__             dspi_master_config_t
#define __slave_config_t__              dspi_slave_config_t
#define __MasterTransferCreateHandle__  DSPI_MasterTransferCreateHandle

static tommRoC_hw_err_enum_t _spi_master_write_transfer(
                __tommRoC_hw_spi_master_handle_t__* const   spiHandlePtr,
        const   uint8_t*                            const   writeBufferPtr,
        const   uint16_t                                    writeBufferLen,
        const   uint32_t                                    timeoutMsec) {

    __transfer_t__ masterXfer;

    tommRoCUtilMemSet(&masterXfer, 0, sizeof(masterXfer));

    masterXfer.txData       = (uint8_t*) writeBufferPtr;
    masterXfer.rxData       = NULL;
    masterXfer.dataSize     = (size_t) writeBufferLen;
    // NOTE: for SPI, control flag is useless to.
#if defined (FSL_FEATURE_SOC_DSPI_COUNT) && FSL_FEATURE_SOC_DSPI_COUNT
    masterXfer.configFlags  = kDSPI_MasterCtar0 | kDSPI_MasterPcs0 | kDSPI_MasterPcsContinuous;
#endif

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(_spi_master_transfer(spiHandlePtr, &masterXfer, timeoutMsec));

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _spi_master_read_transfer(
                __tommRoC_hw_spi_master_handle_t__* const   spiHandlePtr,
                uint8_t*                            const   readBufferPtr,
        const   uint16_t                                    toReadAmount,
        const   uint32_t                                    timeoutMsec) {

    __transfer_t__ masterXfer;

    tommRoCUtilMemSet(&masterXfer, 0, sizeof(masterXfer));

    masterXfer.txData       = NULL;
    masterXfer.rxData       = readBufferPtr;
    masterXfer.dataSize     = (size_t) toReadAmount;
    // NOTE: for SPI, control flag is useless to.
#if defined (FSL_FEATURE_SOC_DSPI_COUNT) && FSL_FEATURE_SOC_DSPI_COUNT
    masterXfer.configFlags  = kDSPI_MasterCtar0 | kDSPI_MasterPcs0 | kDSPI_MasterPcsContinuous;
#endif

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(_spi_master_transfer(spiHandlePtr, &masterXfer, timeoutMsec));

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _spi_master_transceive_transfer(
                __tommRoC_hw_spi_master_handle_t__* const   spiHandlePtr,
        const   uint8_t*                            const   writeBufferPtr,
                uint8_t*                            const   readBufferPtr,
        const   uint16_t                                    bufferLength,
        const   uint32_t                                    timeoutMsec) {

    __transfer_t__ masterXfer;

    tommRoCUtilMemSet(&masterXfer, 0, sizeof(masterXfer));

    masterXfer.txData       = (uint8_t*) writeBufferPtr;
    masterXfer.rxData       = readBufferPtr;
    masterXfer.dataSize     = (size_t) bufferLength;
    // NOTE: for SPI, control flag is useless to.
#if defined (FSL_FEATURE_SOC_DSPI_COUNT) && FSL_FEATURE_SOC_DSPI_COUNT
    masterXfer.configFlags  = kDSPI_MasterCtar0 | kDSPI_MasterPcs0 | kDSPI_MasterPcsContinuous;
#endif

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(_spi_master_transfer(spiHandlePtr, &masterXfer, timeoutMsec));

    return TOMMRO_C_HW_ERR_SUCCESS;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentSPIMaster0Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

    SPI_Type* const spiBase[] = SPI_BASE_PTRS;

    __master_config_t__ config;
    tommRoC_hw_template_bus_spi_nxp_hal_config_t halConfig;

    __MasterGetDefaultConfig__(&config);

#if defined (FSL_FEATURE_SOC_DSPI_COUNT) && FSL_FEATURE_SOC_DSPI_COUNT

    config.ctarConfig.baudRate                      = _spi_master_config_0.baudRate;
    config.ctarConfig.pcsToSckDelayInNanoSec        = 1000000000U / _spi_master_config_0.baudRate;
    config.ctarConfig.lastSckToPcsDelayInNanoSec    = 1000000000U / _spi_master_config_0.baudRate;
    config.ctarConfig.betweenTransferDelayInNanoSec = 1000000000U / _spi_master_config_0.baudRate;

    switch (_spi_master_config_0.mode) {

    case TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_0:
        config.ctarConfig.cpol = kDSPI_ClockPolarityActiveHigh;
        config.ctarConfig.cpha = kDSPI_ClockPhaseFirstEdge;
        break;
    case TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_1:
        config.ctarConfig.cpol = kDSPI_ClockPolarityActiveHigh;
        config.ctarConfig.cpha = kDSPI_ClockPhaseSecondEdge;
        break;
    case TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_2:
        config.ctarConfig.cpol = kDSPI_ClockPolarityActiveLow;
        config.ctarConfig.cpha = kDSPI_ClockPhaseFirstEdge;
        break;
    case TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_3:
        config.ctarConfig.cpol = kDSPI_ClockPolarityActiveLow;
        config.ctarConfig.cpha = kDSPI_ClockPhaseSecondEdge;
        break;

    default:
        // If here, ERROR!!!
        TOMMROC_ASSERT_TRUE(false);

        return TOMMRO_C_HW_LOW_LEVEL_ERR;
    }
#endif

#if defined (FSL_FEATURE_SOC_SPI_COUNT) && FSL_FEATURE_SOC_SPI_COUNT

#if defined (__TOMMROC_TEMPLATE_ARM_NXP_MKE02Z4_IS_USED__)
    config.outputMode = kSPI_SlaveSelectAsGpio;
#endif
    config.baudRate_Bps = _spi_master_config_0.baudRate;

    switch (_spi_master_config_0.mode) {

    case TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_0:
        config.polarity = kSPI_ClockPolarityActiveHigh;
        config.phase    = kSPI_ClockPhaseFirstEdge;
        break;
    case TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_1:
        config.polarity = kSPI_ClockPolarityActiveHigh;
        config.phase    = kSPI_ClockPhaseSecondEdge;
        break;
    case TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_2:
        config.polarity = kSPI_ClockPolarityActiveLow;
        config.phase    = kSPI_ClockPhaseFirstEdge;
        break;
    case TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_3:
        config.polarity = kSPI_ClockPolarityActiveLow;
        config.phase    = kSPI_ClockPhaseSecondEdge;
        break;

    default:
        // If here, ERROR!!!
        TOMMROC_ASSERT_TRUE(false);

        return TOMMRO_C_HW_LOW_LEVEL_ERR;
    }
#endif

    halConfig.spiPtr    = (void*) spiBase[0];
    halConfig.configPtr = (void*) &config;
#if defined (DSPI0_CLK_SRC)
    halConfig.clockName = DSPI0_CLK_SRC;
#elif defined (SPI0_CLK_SRC)
    halConfig.clockName = SPI0_CLK_SRC;
#else
    halConfig.clockName = kCLOCK_BusClk;
#endif

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(
            tommRoCHwTemplateBusSPINXPLocationGetMaster(
                    TOMMROC_HW_TEMPLATE_BUS_SPI_MASTER_0,
                    _spi_master_config_0.location,
                    &halConfig.location));

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(tommRoCHwTemplateBusSPINXPHalMasterInit(&halConfig));

    _spi_master_SPI0_get_callback_ARM(cbFunctPtr);

    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemSet(&_nxp_spi_master_handle_0, 0x00, sizeof(__master_handle_t__)));

    _spi_master_handle_0.spiPtr                 = halConfig.spiPtr;
    _spi_master_handle_0.nxpSPIMasterHandlePtr  = &_nxp_spi_master_handle_0;

    __MasterTransferCreateHandle__(spiBase[0], &_nxp_spi_master_handle_0, _spi_master_transfer_callback, (void*) &_spi_master_handle_0.nxpCallbackData);

#if defined (__TOMMROC_MW_SEMAPHORE_TEMPLATE_IS_USED__)
    TOMMROC_MW_ERR_IF_TOMMROC_MW_LIB_FUNCT_NOT_SUCCESS_RETURN_SPECIFIC_RESULT(
    tommRoCMwSemaphoreCreate(&_spi_master_handle_0.syncSem, 0),
    TOMMRO_C_HW_LOW_LEVEL_ERR);
#endif

    return TOMMRO_C_HW_ERR_SUCCESS;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentSPIMaster1Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

    SPI_Type* const spiBase[] = SPI_BASE_PTRS;

    __master_config_t__ config;
    tommRoC_hw_template_bus_spi_nxp_hal_config_t halConfig;

    __MasterGetDefaultConfig__(&config);

#if defined (FSL_FEATURE_SOC_DSPI_COUNT) && FSL_FEATURE_SOC_DSPI_COUNT

    config.ctarConfig.baudRate                      = _spi_master_config_1.baudRate;
    config.ctarConfig.pcsToSckDelayInNanoSec        = 1000000000U / _spi_master_config_1.baudRate;
    config.ctarConfig.lastSckToPcsDelayInNanoSec    = 1000000000U / _spi_master_config_1.baudRate;
    config.ctarConfig.betweenTransferDelayInNanoSec = 1000000000U / _spi_master_config_1.baudRate;

    switch (_spi_master_config_1.mode) {

    case TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_0:
        config.ctarConfig.cpol = kDSPI_ClockPolarityActiveHigh;
        config.ctarConfig.cpha = kDSPI_ClockPhaseFirstEdge;
        break;
    case TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_1:
        config.ctarConfig.cpol = kDSPI_ClockPolarityActiveHigh;
        config.ctarConfig.cpha = kDSPI_ClockPhaseSecondEdge;
        break;
    case TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_2:
        config.ctarConfig.cpol = kDSPI_ClockPolarityActiveLow;
        config.ctarConfig.cpha = kDSPI_ClockPhaseFirstEdge;
        break;
    case TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_3:
        config.ctarConfig.cpol = kDSPI_ClockPolarityActiveLow;
        config.ctarConfig.cpha = kDSPI_ClockPhaseSecondEdge;
        break;

    default:
        // If here, ERROR!!!
        TOMMROC_ASSERT_TRUE(false);

        return TOMMRO_C_HW_LOW_LEVEL_ERR;
    }
#endif

#if defined (FSL_FEATURE_SOC_SPI_COUNT) && FSL_FEATURE_SOC_SPI_COUNT

#if defined (__TOMMROC_TEMPLATE_ARM_NXP_MKE02Z4_IS_USED__)
    config.outputMode = kSPI_SlaveSelectAsGpio;
#endif
    config.baudRate_Bps = _spi_master_config_1.baudRate;

    switch (_spi_master_config_1.mode) {

    case TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_0:
        config.polarity = kSPI_ClockPolarityActiveHigh;
        config.phase    = kSPI_ClockPhaseFirstEdge;
        break;
    case TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_1:
        config.polarity = kSPI_ClockPolarityActiveHigh;
        config.phase    = kSPI_ClockPhaseSecondEdge;
        break;
    case TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_2:
        config.polarity = kSPI_ClockPolarityActiveLow;
        config.phase    = kSPI_ClockPhaseFirstEdge;
        break;
    case TOMMRO_C_HW_TEMPLATE_BUS_SPI_MASTER_MODE_3:
        config.polarity = kSPI_ClockPolarityActiveLow;
        config.phase    = kSPI_ClockPhaseSecondEdge;
        break;

    default:
        // If here, ERROR!!!
        TOMMROC_ASSERT_TRUE(false);

        return TOMMRO_C_HW_LOW_LEVEL_ERR;
    }
#endif

    halConfig.spiPtr    = (void*) spiBase[1];
    halConfig.configPtr = (void*) &config;
#if defined (DSPI1_CLK_SRC)
    halConfig.clockName = DSPI1_CLK_SRC;
#elif defined (SPI1_CLK_SRC)
    halConfig.clockName = SPI1_CLK_SRC;
#else
    halConfig.clockName = kCLOCK_BusClk;
#endif

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(
            tommRoCHwTemplateBusSPINXPLocationGetMaster(
                    TOMMROC_HW_TEMPLATE_BUS_SPI_MASTER_1,
                    _spi_master_config_1.location,
                    &halConfig.location));

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(tommRoCHwTemplateBusSPINXPHalMasterInit(&halConfig));

    _spi_master_SPI1_get_callback_ARM(cbFunctPtr);

    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemSet(&_nxp_spi_master_handle_1, 0x00, sizeof(__master_handle_t__)));

    _spi_master_handle_1.spiPtr                 = halConfig.spiPtr;
    _spi_master_handle_1.nxpSPIMasterHandlePtr  = &_nxp_spi_master_handle_1;

    __MasterTransferCreateHandle__(spiBase[1], &_nxp_spi_master_handle_1, _spi_master_transfer_callback, (void*) &_spi_master_handle_1.nxpCallbackData);

#if defined (__TOMMROC_MW_SEMAPHORE_TEMPLATE_IS_USED__)
    TOMMROC_MW_ERR_IF_TOMMROC_MW_LIB_FUNCT_NOT_SUCCESS_RETURN_SPECIFIC_RESULT(
    tommRoCMwSemaphoreCreate(&_spi_master_handle_1.syncSem, 0),
    TOMMRO_C_HW_LOW_LEVEL_ERR);
#endif

    return TOMMRO_C_HW_ERR_SUCCESS;
}
